[package]
name = "pico_pll_config"
version = "0.1.0"
edition = "2021"
authors = ["kromych"]
description = "PLL configuration macro for the Raspberry Pi Pico"
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
homepage = "https://github.com/kromych/pico_pll_config"
keywords = ["embedded", "hal", "raspberry-pi", "rp2040", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kromych/pico_pll_config"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
rp2040-hal = ">= 0.5"
fugit = ">= 0.2"
